# karatext

./: .gitmodules  CMakeLists.txt  pixels.h  render.cc  textline.h  token.h
cmd/: glog-stderr  ninja-no-jit
learning/: CMakeLists.txt  capi.c  frame.cc  text.cc  textcenter.cc  twosent.cc  twostyle.cc
samples/: config.json  mua.t
